2000-01-07  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in, bin/usa-itar-stripper.sh:
	    'make dist-usa' creates now
	       - DIRNAME-usa.tar  package (vs. DIRNAME.tar of 'make dist')
	       - crypto-DIRNAME.diff  file

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Seen strange junk commands fed out to the remote
	    systems, trying to determine what is going on..

2000-01-05  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c:
	    Change several policy situation '550' codes to '553';
	    temporary failure indicators shall stay as '440'.

2000-01-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Killed 'HAVE_TCPD_H' code from these files; using
	    smtpserver's policy database is better -- way better..

	* transports/smtp/smtp.c, include/libz.h, lib/parseintv.c,
	  lib/Makefile.in, scheduler/readconfig.c:
	    - Moved  parse_interval()  into library (from scheduler).
	    - Using it at smtp-ta for timeout parameter parsing

	* transports/smtp/smtp.c:
	    If 'DATA' yields '500' series, don't just do RSET + retry
	    at the same stream. (EX_IOERR)

2000-01-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/libdb/headers.c:
	    Darn..  Can't just disable "date" from known headers, however
	    changeing their semantics to 'nilHeaderSemantics' should do it.

	* scheduler/threads.c:
	    abort() replaced with correct code -- "the thing never to
	    happen *did* happen"...

2000-01-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c, lib/skip821address.c, transports/libta/ctlopen.c:
	    Have seen one mighty strange local non-delivery, and learned
	    ways to use quotes in addresses which are not always safe from
	    router to scheduler, and to TAs..

	* man/smtp.8, proto/smtp-tls.conf{,.in}, doc/guides/openssl,
	  configure.in, proto/Makefile.in, proto/scheduler.conf.in,
	  proto/post-install.sh.in:
	    - Updated 'smtp.8' man-page
	    - Updated OpenSSL GUIDE